--- a/pom.xml
+++ b/pom.xml
@@ -97,12 +97,27 @@
           <version>2.5.3</version>
       </dependency>
 
+      <!-- MyBatis二级缓存第三方框架——ehcache -->
+      <!--
+      <dependency>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis-ehcache</artifactId>
+          <version>1.0.0</version>
+      </dependency>
+      <dependency>
+          <groupId>net.sf.ehcache</groupId>
+          <artifactId>ehcache-core</artifactId>
+          <version>2.4.3</version>
+      </dependency>
+      -->
 
       <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
-          <version>4.11</version>
+          <version>4.12</version>
       </dependency>
+
+
   </dependencies>
 
 
